Convert to pure ESM

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "astro-analytics",
   "version": "1.0.1",
   "description": "Analytics components for Astro",
-  "main": "src/index.js",
+  "type": "module",
+  "exports": "./src/index.js",
   "author": "Timur Badretdinov <destinerx@gmail.com>",
   "keywords": [
     "astro-component",
