--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "2.4.0",
   "description": "Analytics components for Astro",
   "type": "module",
-  "exports": "./src/index.js",
   "author": "Timur Badretdinov <destinerx@gmail.com>",
   "keywords": [
     "astro-component",
@@ -13,5 +12,12 @@
     "type": "git",
     "url": "git://github.com/Destiner/astro-analytics.git"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "exports": {
+    ".": "./index.ts"
+  },
+  "files": [
+    "src",
+    "index.ts"
+  ]
 }
